--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "mocha": "^6.1.4"
+  },
+  "dependencies": {
+    "cli-table3": "^0.5.1",
+    "inquirer": "^6.3.1"
   }
 }
